@@ -1,9 +1,9 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 1.4
-Date: 2014-11-19
-Packaged: 2014-11-19; dylan
+Version: 1.4-1
+Date: 2014-12-19
+Packaged: 2014-12-19; dylan
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
 Description: A collection of functions for reading data from USDA-NCSS soil databases.
